Correct attributes that don't resolve in code blocks
VM-install guide - Correct attributes that don't resolve in code blocks

https://issues.redhat.com/browse/AAP-28102

--- a/downstream/modules/platform/ref-gateway-controller-hub-eda-ext-db.adoc
+++ b/downstream/modules/platform/ref-gateway-controller-hub-eda-ext-db.adoc
@@ -15,6 +15,7 @@ Use this example to populate the inventory file to deploy single instances of pl
 
 ====
 
+[literal, subs="+attributes"]
 -----
 [automationcontroller]
 controller.example.com
