--- a/downstream/modules/platform/ref-single-controller-hub-eda-with-managed-db.adoc
+++ b/downstream/modules/platform/ref-single-controller-hub-eda-with-managed-db.adoc
@@ -15,6 +15,7 @@ Use this example to populate the inventory file to deploy single instances of {C
 
 ====
 
+[literal, subs="+attributes"]
 -----
 [automationcontroller]
 controller.example.com
