--- a/downstream/modules/platform/proc-controller-getting-started-with-job-templates.adoc
+++ b/downstream/modules/platform/proc-controller-getting-started-with-job-templates.adoc
@@ -9,4 +9,4 @@ As part of the initial setup, a *Demo Job Template* is created for you.
 . To review existing templates, select {MenuAETemplates} from the navigation panel.
 . Click btn:[Demo Job Template] to view its details.
 
-image::controller-job-template-demo-details.png[Job templates]
+//image::controller-job-template-demo-details.png[Job templates]
