--- a/downstream/snippets/snip-eda-25-plus-aap24.adoc
+++ b/downstream/snippets/snip-eda-25-plus-aap24.adoc
@@ -1,3 +1,3 @@
-You can configure a new installation of {EDAcontroller} 1.1 with {ControllerName} 4.4 or 4.5, which is considered a general avaliability release fully supported by Red Hat. {ControllerName} 4.4 or 4.5 were released as part of {PlatformNameShort} 2.4.
+You can configure a new installation of {EDAcontroller} 1.1 with {ControllerName} 4.4 or 4.5, which is considered a general avaliability release fully supported by Red Hat. {ControllerName} 4.4 and 4.5 were released as part of {PlatformNameShort} 2.4.
 
 Upgrading to {EDAcontroller} 1.1 from an earlier release is unsupported at this time.
