--- a/downstream/modules/hub/proc-set-rhcertified-remote.adoc
+++ b/downstream/modules/hub/proc-set-rhcertified-remote.adoc
@@ -22,16 +22,16 @@ For more information on permissions, see link:{BaseURL}/red_hat_ansible_automati
 
 .Procedure
 //[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
-. Log in to your {PrivateHubName}.
+. Log in to your {PlatformNameShort}.
 . From the navigation panel, select {MenuACAdminRemotes}.
-. In the *rh-certified* remote repository, click the btn:[More Actions] icon *{MoreActionsIcon}* and click btn:[Edit].
+. In the *rh-certified* remote repository, click btn:[Edit remote].
 . In the *URL* field, paste the *Sync URL*.
 . In the *Token* field, paste the token you acquired from {Console}.
-. Click btn:[Save].
+. Click btn:[Save remote].
 +
 You can now synchronize collections between your organization synclist on {Console} and your {PrivateHubName}.
 +
-. Click the btn:[More Actions] icon *{MoreActionsIcon}* and select *Sync*.
+. From the navigation panel, select {MenuACAdminRepositories}. Next to *rh-certified* click the btn:[More Actions] icon *{MoreActionsIcon}* and select *Sync*.
 
 .Verification
 The *Sync status* notification updates to notify you that the Red Hat Certified Content Collections synchronization is complete.
