AAP-28448 Applied updates relevant to 2.5 and adjusted syntax to adhere to style guides

--- a/downstream/modules/eda/proc-modifying-memory-after-install.adoc
+++ b/downstream/modules/eda/proc-modifying-memory-after-install.adoc
@@ -7,7 +7,7 @@ By default, each rulebook activation container has a 200MB memory limit.
 You can modify this default value after installation by using the following procedure:
 
 .Procedure
-. Navigate to the environment file at `/etc/ansible-automation-platform/eda`.
+. Navigate to the environment file at `/etc/ansible-automation-platform/eda/settings.yaml`.
 . Modify the default container memory limit.
-For example, `EDA_PODMAN_MEM_LIMIT = '300m'`.
-. Restart the {EDAcontroller} services using `systemctl restart automation-eda-controller.target`.
+For example, `PODMAN_MEM_LIMIT = '300m'`.
+. Restart the {EDAcontroller} services using `automation-eda-controller-service restart`.
