--- a/downstream/modules/eda/proc-modifying-activations-after-install.adoc
+++ b/downstream/modules/eda/proc-modifying-activations-after-install.adoc
@@ -7,8 +7,8 @@ By default, {EDAcontroller} allows 12 activations to run simultaneously.
 You can modify this default value after installation by using the following procedure:
 
 .Procedure
-. Navigate to the environment file at `/etc/ansible-automation-platform/eda`.
+. Navigate to the environment file at `/etc/ansible-automation-platform/eda/settings.yaml`.
 . Choose the number of maximum running activations that you need.
-For example, `EDA_MAX_RUNNING_ACTIVATIONS = 16`
-. Use the following command to restart EDA services: `systemctl restart automation-eda-controller.target`
+For example, `MAX_RUNNING_ACTIVATIONS = 16`
+. Use the following command to restart EDA services: `automation-eda-controller-service restart`
 
