--- a/downstream/modules/eda/con-modifying-simultaneous-activations.adoc
+++ b/downstream/modules/eda/con-modifying-simultaneous-activations.adoc
@@ -10,8 +10,8 @@ To change this behavior, you must change the default maximum number of running r
 
 [NOTE]
 ====
- The value for `EDA_MAX_RUNNING_ACTIVATIONS` does not change whe you modify the instance size, so it needs to be adjusted manually.
- ====
+The value for `EDA_MAX_RUNNING_ACTIVATIONS` does not change when you modify the instance size, so it needs to be adjusted manually.
+====
 
 include::proc-modifying-activations-during-install.adoc[leveloffset=+1]
 include::proc-modifying-activations-after-install.adoc[leveloffset=+1]
