AAP-28448 Applied updates relevant to 2.5 and adjusted syntax to adhere to style guides

--- a/downstream/modules/eda/ref-performance-troubleshooting.adoc
+++ b/downstream/modules/eda/ref-performance-troubleshooting.adoc
@@ -15,6 +15,6 @@ If the event you are expecting is coming from a source other than what is in the
 
 * My activation keeps restarting in an infinite loop.
 ** By default, the reset policy for rulebook activations is set to “on failure”. Change the restart policy using the following procedure:
-. Navigate to the Rulebook Activation screen.
+. Navigate to {MenuADRulebookActivations}.
 . Click the *Restart Policy* list to display the options. 
-. Select the appropriate value: “On Failure”, “Always”, “Never”.
+. Select the appropriate value: *On Failure*, *Always*, *Never*.
