--- a/downstream/modules/platform/con-controller-access-organizations.adoc
+++ b/downstream/modules/platform/con-controller-access-organizations.adoc
@@ -1,24 +1,8 @@
+:_mod-docs-content-type: CONCEPT
+
 [id="con-controller-access-organizations"]
 
-= Access to organizations
+= Access to organizations 
+You can manage access to an organization by selecting an organization from the Organizations list view and selecting the associated tabs for providing access to xref:proc-controller-add-organization-user[Users], xref:proc-gw-add-admin-organization[Administrators] or xref:proc-gw-add-team-organization[Teams].
 
-* Select btn:[Access] when viewing your organization to display the users associated with this organization, and their
-roles.
-
-image:organizations-show-users-permissions-organization.png[Organization access]
-
-Use this page to complete the following tasks: 
-
-* Manage the user membership for this organization. 
-Click btn:[Users] on the navigation panel to manage user membership on a per-user basis from the *Users* page. 
-* Assign specific users certain levels of permissions within your organization.
-* Enable them to act as an administrator for a particular resource. 
-For more information, see link:https://docs.ansible.com/automation-controller/latest/html/userguide/security.html#rbac-ug[Role-Based Access Controls].
-
-Click a user to display that user's details.
-You can review, grant, edit, and remove associated permissions for that user.
-For more information, see xref:assembly-controller-users[Users].
-
-include::proc-controller-add-organization-user.adoc[leveloffset=+1]
-include::ref-controller-organization-notifications.adoc[leveloffset=+1]
 
