--- a/downstream/modules/platform/proc-controller-review-organizations.adoc
+++ b/downstream/modules/platform/proc-controller-review-organizations.adoc
@@ -1,23 +1,15 @@
+:_mod-docs-content-type: PROCEDURE
+
 [id="controller-review-organizations"]
 
-= Reviewing the organization
+= Organizations list view
 
-The Organizations page displays the existing organizations for your installation.
+The Organizations page displays the existing organizations for your installation. From here, you can search for a specific organization, filter the list of organizations, or change the sort order for the list.
 
 .Procedure
 
-* From the navigation panel, select {MenuControllerOrganizations}.
-+
-[NOTE]
-====
-{ControllerNameStart} automatically creates a default organization.
-If you have a Self-support level license, you have only the default organization available and must not delete it.
-====
-You can use the default organization as it is initially set up and edit it later.
-+
-[NOTE]
-====
-Only Enterprise or Premium licenses can add new organizations.
-====
-
-Enterprise and Premium license users who want to add a new organization should see the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_user_guide/index#assembly-controller-organizations[Organizations] section in _{ControllerUG}_.
+. From the navigation panel, select menu:{MenuAMOrganizations}.
+. In the Search bar, enter an appropriate keyword for the organization you want to search for and click the arrow icon.
+. From the menu bar, you can sort the list of organizations by using the arrows for *Name* to toggle your sorting preference.
+. You can also sort the list by selecting *Name*, *Created* or *Modified* from the *Sort* list.
+. You can view organization details by clicking an organization *Name* on the Organizations page.  
