AAP-19133 Update content on Users for 2.5 RBAC changes

--- a/downstream/modules/platform/con-controller-create-users.adoc
+++ b/downstream/modules/platform/con-controller-create-users.adoc
@@ -1,3 +1,5 @@
+:_mod-docs-content-type: CONCEPT
+
 [id="controller-create-users"]
 
 Users associated with an organization are shown in the *Access* tab of the organization.
