--- a/downstream/modules/platform/proc-controller-deleting-a-user.adoc
+++ b/downstream/modules/platform/proc-controller-deleting-a-user.adoc
@@ -1,16 +1,16 @@
+:_mod-docs-content-type: PROCEDURE
+
 [id="proc-controller-deleting-a-user"]
 
 = Deleting a user
 
-Before you can delete a user, you must have user permissions.
-When you delete a user account, the name and email of the user are permanently removed from {ControllerName}.
-
+Before you can delete a user, you must have normal user or system administrator permissions. When you delete a user account, the name and email of the user are permanently removed from {PlatformNameShort}.
 .Procedure
-. From the navigation panel, select {MenuControllerUsers}.
-. Click btn:[Users] to display a list of the current users.
-. Select the checkbox for the user that you want to remove.
-. Click btn:[Delete].
-//+
-//image:users-home-users-checked-delete.png[image]
+. From the navigation panel, select {MenuAMUsers}.
+. Select the check box for the user that you want to remove.
+. Click the {MoreActionsIcon} icon next to the user you want removed and select *Delete user*.
++
+[NOTE]
+====
+You can delete multiple users by selecting the checkbox next to each user you want to remove, and clicking *Delete selected users* from the {MoreActionsIcon} list. 
 
-. Click btn:[Delete] in the confirmation warning message to permanently delete the user.
