--- a/downstream/modules/platform/ref-controller-user-roles.adoc
+++ b/downstream/modules/platform/ref-controller-user-roles.adoc
@@ -1,20 +1,21 @@
+:_mod-docs-content-type: REFERENCE
+
 [id="ref-controller-user-roles"]
 
-= Displaying a user's roles
+= Adding roles for a user
 
-From the *Users > Details* page, select the *Roles* tab to display the set of roles assigned to this user. 
-These offer the ability to read, change, and administer projects, inventories, job templates, and other elements.
-
-image:users-permissions-list-for-example-user.png[Users- permissions list]
-
-//This doesn't seem to fit here.
-//[NOTE]
-//====
-//The job template administrator may not have access to other resources (inventory, project, credentials, or instance groups) associated with the template. 
-//
-//Without access to these, certain fields in the job template are not editable. 
-//
-//System Administrators can grant individual users permissions to certain resources as necessary.
-//
-//For more information, see xref:proc-controller-user-permissions[Adding permissions to a user].
-//====
+You can grant access for users to use, read, or write credentials by assigning roles to them.
+.Procedure
+. From the navigation panel, select {MenuAMUsers}.
+. From the Users list view, click on the user to which you want to add roles.
+. Select the *Roles* tab to display the set of roles assigned to this user. These provide the ability to read, modify, and administer resources.
+. To add new roles, click btn:[Add roles].
++
+include::snippets/snip-gw-roles-note-multiple-components.adoc
++
+. Select a Resource type and click btn:[Next]. 
+. Select the resources that will receive new roles and click btn:[Next].
+. Select the roles that will be applied to the resources and click btn:[Next].
+. Review the settings and click btn:[Save].
++
+A progress bar displays indicating whether the role assignments were successfully applied.
