--- a/downstream/modules/platform/ref-controller-user-teams.adoc
+++ b/downstream/modules/platform/ref-controller-user-teams.adoc
@@ -1,15 +1,18 @@
+:_mod-docs-content-type: REFERENCE
+
 [id="ref-controller-user-teams"]
 
-= Displaying a user's teams
+= Adding a team for a user
 
-From the *Users > Details* page, select the *Teams* tab to display the list of teams of which that user is a member. 
+You can add a team for a user from the Users list view.
 
-[NOTE]
-====
-You cannot modify team membership from this display panel. 
-For more information, see xref:assembly-controller-teams[Teams].
-====
+.Procedure
+. From the navigation panel, select {MenuAMUsers}.
+. Select the user that you want to which you want to add team membership. 
+. Select the *Teams* tab to display the list of teams of which that user is a member.
+. Click btn:[Add Team(s)]. 
+. Select the check box for the team to which you want to add the user.
+. You can search this list by the team *Name* or *Organization*.
++
+Until a team has been created and a user has been assigned to that team, the assigned team details for that user remain empty.
 
-Until you create a team and assign a user to that team, the assigned teams details for that user is displayed as empty.
-
-//image:users-teams-list-for-example-user.png[Users - teams list]
