--- a/downstream/modules/platform/proc-controller-add-organization-user.adoc
+++ b/downstream/modules/platform/proc-controller-add-organization-user.adoc
@@ -2,8 +2,8 @@
 
 Adding a user to an organization
 
-You can provide a user with access to an organization by adding them to the organization and managing the roles associated with the user. To add a user to an organization, the user must already exist. For more information, see Create a user. 
-To add roles for a user, the role must already exist. See Automation execution roles and Automation decision roles for more information about creating new roles. 
+You can provide a user with access to an organization by adding them to the organization and managing the roles associated with the user. To add a user to an organization, the user must already exist. For more information, see xref:proc-controller-creating-a-user[Creating a user]. 
+To add roles for a user, the role must already exist. See xref:proc-gw-roles_auto-eec[Automation execution roles] and xref:proc-gw-roles_auto-dec[Automation decision] roles for more information about creating new roles. 
 .Procedure
 . From the navigation panel, select {MenuAMOrganizations}.
 . From the Organizations list view, select the organization to which you want to add a user. 
@@ -15,7 +15,7 @@ To add roles for a user, the role must already exist. See Automation execution r
 include::snippets/snip-gw-roles-note-multiple-components.adoc
 +
 . Click btn:[Next] to review the roles settings.
-. Click btn:[Finish] to apply the roles to the selected users, and to add them as members. The Add users dialog displays the updated roles assigned for each user.
+. Click btn:[Finish] to apply the roles to the selected users, and to add them as members. The *Add users* dialog displays the updated roles assigned for each user.
 +
 [NOTE] A user with associated roles retains them if they are reassigned to another organization.
 +
