AAP-19133 Update existing modules for organizations for 2.5 RBAC changes (#1677)
* AAP-19133 Update existing modules for organizations for 2.5 RBAC changes

* AAP-19133 - implement peer review changes

--- a/downstream/modules/platform/proc-controller-add-organization-user.adoc
+++ b/downstream/modules/platform/proc-controller-add-organization-user.adoc
@@ -1,37 +1,26 @@
 [id="proc-controller-add-organization-user"]
 
-= Add a User or Team
+Adding a user to an organization
 
-To add a user or team to an organization, the user or team must already exist. 
-
-For more information, see xref:proc-controller-creating-a-user[Creating a User] and xref:proc-controller-creating-a-team[Creating a Team].
-
-To add existing users or team to the Organization:
-
+You can provide a user with access to an organization by adding them to the organization and managing the roles associated with the user. To add a user to an organization, the user must already exist. For more information, see xref:proc-controller-creating-a-user[Creating a user]. 
+To add roles for a user, the role must already exist. See xref:proc-gw-roles_auto-eec[Automation execution roles] and xref:proc-gw-roles_auto-dec[Automation decision] roles for more information about creating new roles. 
 .Procedure
-. In the *Access tab* of the *Organization* page, click btn:[Add].
-. Select a user or team to add. 
+. From the navigation panel, select {MenuAMOrganizations}.
+. From the Organizations list view, select the organization to which you want to add a user. 
+. Click the *Users* tab to add users.
+. Click btn:[Add users] and select one or more users from the list by clicking the checkbox next to the name to add them as members.
 . Click btn:[Next].
-. Select one or more users or teams from the list by clicking the checkbox next to the name to add them as members.
-. Click btn:[Next].
+. Select the roles you want the selected user to have. Scroll down for a complete list of roles.
 +
-image:organizations-add-users-for-example-organization.png[Add roles]
+include::snippets/snip-gw-roles-note-multiple-components.adoc
 +
-In this example, two users have been selected.
-. Select the role you want the selected user or team to have. 
-Scroll down for a complete list of roles. 
-Different resources have different options available.
+. Click btn:[Next] to review the roles settings.
+. Click btn:[Finish] to apply the roles to the selected users, and to add them as members. The *Add users* dialog displays the updated roles assigned for each user.
 +
-image:organizations-add-users-roles.png[Add user roles]
-. Click btn:[Save] to apply the roles to the selected user or team, and to add them as members.
-The *Add Users* or *Add Teams* window displays the updated roles assigned for each user and team.
+[NOTE] A user with associated roles retains them if they are reassigned to another organization.
 +
-[NOTE]
-====
-A user or team with associated roles retains them if they are reassigned to another organization.
-====
-. To remove roles for a particular user, click the disassociate image:disassociate.png[Disassociate,10,10] icon next to its resource.
-This launches a confirmation dialog, asking you to confirm the disassociation.
+. To remove a particular user from the organization, select *Remove user* from the {MoreActionsIcon} list next to the user or team. This launches a confirmation dialog, asking you to confirm the removal.
+
 
 
 
