AAP-19133 - implement peer review changes

--- a/downstream/modules/platform/proc-controller-creating-a-team.adoc
+++ b/downstream/modules/platform/proc-controller-creating-a-team.adoc
@@ -19,5 +19,5 @@ Each team can only be assigned to one organization.
 +
 . Click btn:[Create team].
 +
-The Details page opens, where you can review and edit your team information.
+The *Details* page opens, where you can review and edit your team information.
 
