--- a/downstream/modules/platform/proc-controller-user-permissions.adoc
+++ b/downstream/modules/platform/proc-controller-user-permissions.adoc
@@ -15,8 +15,8 @@ You can set permissions through an inventory, project, job template and other re
 include::snippets/snip-gw-roles-note-multiple-components.adoc
 +
 . Select a *Resource type* and click btn:[Next]. 
-. Select the resources that will receive new roles and click btn:[Next].
-. Select the roles that will be applied to the resources and click btn:[Next].
+. Select the resources to receive the new roles and click btn:[Next].
+. Select the roles to apply to the resources and click btn:[Next].
 . Review the settings and click btn:[Save].
 + 
 A progress bar displays indicating whether the role assignments were successfully applied.
