AAP-19133 Update content on teams for 2.5 RBAC changes (#1678)
* AAP-19133 Update content on teams for 2.5 RBAC changes

* AAP-19133 - implement peer review changes

--- a/downstream/modules/platform/proc-controller-creating-a-team.adoc
+++ b/downstream/modules/platform/proc-controller-creating-a-team.adoc
@@ -1,50 +1,23 @@
+:_mod-docs-content-type: PROCEDURE
+
 [id="proc-controller-creating-a-team"]
 
 = Creating a team
 
-You can create as many teams of users as you need for your organization. 
-You can assign permissions to each team, just as with users.
-Teams can also assign ownership for credentials, minimizing the steps to assign the same credentials to the same user.
-
+You can create new teams, assign an organization to the team, and manage the users and administrators associated with each team. Users associated with a team inherit the permissions associated with the team and any organization permissions to which the team has membership. 
+To add a user or administrator to a team, the user must have already been created.
 .Procedure
-. On the *Teams* page, click btn:[Add].
+. From the navigation panel, select {MenuAMTeams}.
+. Click btn:[Create team].
+. Enter a *Name* and optionally provide a *Description* for the team. 
+. Select an organization from the *Organization* list to which you want to associate this team.
 +
-//image:teams-create-new-team.png[Teams -create new team]
-. Enter the appropriate details into the following fields:
-
-* *Name*
-* Optional: *Description*
-* *Organization*: You must select an existing organization
-. Click *Save*.
-The *Details* dialog opens.
-. Review and edit your team information.
+[NOTE]
+====
+Each team can only be assigned to one organization.
+====
 +
-image:teams-example-team-successfully-created.png[Teams- Details dialog]
+. Click btn:[Create team].
++
+The *Details* page opens, where you can review and edit your team information.
 
-== Adding or removing a user to a team
-
-To add a user to a team, the user must already have been created.
-For more information, see xref:proc-controller-creating-a-user[Creating a user]. 
-Adding a user to a team adds them as a member only.
-Use the *Access* tab to specify a role for the user on different resources. 
-
-.Procedure
-. In the *Access* tab of the *Details* page click btn:[Add].
-. Follow the prompts to add a user and assign them to roles.
-. Click btn:[Save].
-
-== Removing roles for a user
-
-.Procedure
-
-* To remove roles for a particular user, click the image:disassociate.png[Disassociate,10,10] icon next to its resource.
-
-//image:permissions-disassociate.png[image]
-
-This launches a confirmation dialog, asking you to confirm the disassociation.
-
-//image:permissions-disassociate-confirm.png[image]
-
-include::ref-controller-team-access.adoc[leveloffset=+1]
-include::ref-controller-team-roles.adoc[leveloffset=+1]
-include::proc-controller-team-add-permissions.adoc[leveloffset=+1]
