AAP-20543 Ensure UI parity for just a couple of sections for EDA controller user guide

--- a/downstream/modules/eda/proc-eda-set-up-rulebook-activation.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-rulebook-activation.adoc
@@ -4,15 +4,16 @@
 
 .Prerequisites
 // [ddacosta] I'm not sure whether there will be an EDA specific dashboard in the gateway. Step 1 might need to change to something like "Log in to AAP".
-* You are logged in to the {EDAcontroller} Dashboard as a Content Consumer.
+* You are logged in to the {PlatformNameShort} Dashboard as a Content Consumer.
 * You have set up a project.
 * You have set up a decision environment.
 * You have set up an {ControllerName} token.
 
 .Procedure
 // [ddacosta] I'm not sure whether there will be an EDA specific dashboard in the gateway. Step 1 might need to change to something like "Log in to AAP".
-. Navigate to the {EDAcontroller} Dashboard.
-. From the navigation panel, select {MenuADRulebookActivations}.
+. Log in to the {PlatformNameShort} Dashboard.
+. Navigate to the {MenuADRulebookActivations}.
+. Click btn:[Create rulebook activation]. 
 . Insert the following:
 +
 Name:: Insert the name.
