--- a/downstream/modules/eda/proc-eda-view-activation-output.adoc
+++ b/downstream/modules/eda/proc-eda-view-activation-output.adoc
@@ -9,6 +9,7 @@ You can view the output of the activations in the *History* tab.
 An activation instance represents a single execution of the activation.
 . Then select the activation instance in question, this will show you the *Output* produced by that specific execution.
 
+//Replace this screenshot with current view
 image::eda-rulebook-activation-history.png[Rulebook activation history]
 
 To view events that came in and triggered an action, you can use the xref:eda-rule-audit[Rule Audit] section in the {EDAcontroller} Dashboard.
