--- a/downstream/modules/eda/proc-eda-view-rule-audit-actions.adoc
+++ b/downstream/modules/eda/proc-eda-view-rule-audit-actions.adoc
@@ -5,7 +5,7 @@
 .Procedure
 
 . From the navigation panel select *{MenuADRuleAudit}*.
-. Select the desired rule, this brings you to the *Actions* tab.
+. Select the desired rule, then select the *Actions* tab.
 
 From here you can view executed actions that were taken.
 Some actions are linked out to {ControllerName} where you can view the output.
