--- a/downstream/modules/eda/proc-eda-set-up-new-decision-environment.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-new-decision-environment.adoc
@@ -13,8 +13,9 @@ For more information, see the xref:eda-set-up-credential[Setting up credentials]
 
 .Procedure
 // ddacosta I'm not sure whether there will be an EDA specific dashboard in the gateway. Step 1 might need to change to something like "Log in to AAP".
-. Navigate to the {EDAcontroller} Dashboard.
-. From the navigation panel, select {MenuADDecisionEnvironments}.
+. Log in to the {PlatformNameShort} Dashboard.
+. Navigate to {MenuADDecisionEnvironments}.
+. Click btn:[Create decision environment]
 . Insert the following:
 +
 Name:: Insert the name.
@@ -23,7 +24,7 @@ Image:: This is the full image location, including the container registry, image
 Credential:: This field is optional. This is the token needed to utilize the decision environment image.
 . Select btn:[Create decision environment].
 
-Your decision environment is now created and can be managed on the *Decision Environments* screen.
+Your decision environment is now created and can be managed on the *Decision Environments* page.
 
 After saving the new decision environment, the decision environment's details page is displayed.
 From there or the *Decision Environments* list view, you can edit or delete it.
