AAP-26615: Incorporated peer feedback

--- a/lightspeed/modules/proc_create-connection-secrets.adoc
+++ b/lightspeed/modules/proc_create-connection-secrets.adoc
@@ -4,7 +4,7 @@
 
 = Creating connection secrets
 
-You must create authorization secret to connect to {PlatformName}, and a model secret to connect to {ibmwatsonxcodeassistant}. If you need to trust a custom Certificate Authority, you must create a bundle secret.
+You must create an authorization secret to connect to {PlatformName}, and a model secret to connect to {ibmwatsonxcodeassistant}. If you need to trust a custom Certificate Authority, you must create a bundle secret.
 
 .Prerequisites
 * You have installed the {PlatformNameShort} operator on the {OCP}. 
@@ -105,7 +105,7 @@ fatal: unable to access 'https://private.repo./mine/ansible-rulebook.git': SSL c
 ....
 
 .Procedure
-Use one of the following methods to create a custom bundle secret using CLI: 
+Use one of the following methods to create a custom bundle secret using the CLI: 
 
 * *Using a Certificate Authority secret*
 +
