AAP-20543 Peer review edit - missing period

--- a/downstream/modules/eda/proc-eda-set-up-new-decision-environment.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-new-decision-environment.adoc
@@ -15,7 +15,7 @@ For more information, see the xref:eda-set-up-credential[Setting up credentials]
 // ddacosta I'm not sure whether there will be an EDA specific dashboard in the gateway. Step 1 might need to change to something like "Log in to AAP".
 . Log in to the {PlatformNameShort} Dashboard.
 . Navigate to {MenuADDecisionEnvironments}.
-. Click btn:[Create decision environment]
+. Click btn:[Create decision environment].
 . Insert the following:
 +
 Name:: Insert the name.
