--- a/downstream/modules/platform/con-controller-settings.adoc
+++ b/downstream/modules/platform/con-controller-settings.adoc
@@ -7,7 +7,7 @@ You can configure some {ControllerName} options using the *Settings* menu of the
 
 The *Settings* page enables an administrator to configure the following:
 
-* link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatfromVers}/html/automation_controller_administration_guide/assembly-ag-controller-config#proc-controller-configure-subscriptions[Subscriptions] TBD
-* link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/assembly-ag-controller-config#controller-configure-system[System] TBD
-* link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/assembly-ag-controller-config#controller-configure-jobs[Jobs]TBD
-* link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/assembly-ag-controller-config#proc-controller-configure-analytics[{Analytics}] TBD
+* link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatfromVers}/html/automation_controller_administration_guide/assembly-ag-controller-config#proc-controller-configure-subscriptions[Subscriptions]
+* link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/assembly-ag-controller-config#controller-configure-system[System]
+* link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/assembly-ag-controller-config#controller-configure-jobs[Jobs]
+* link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/assembly-ag-controller-config#proc-controller-configure-analytics[{Analytics}]
