--- a/downstream/modules/platform/proc-controller-configure-system.adoc
+++ b/downstream/modules/platform/proc-controller-configure-system.adoc
@@ -29,8 +29,8 @@ If this setting is an empty list (the default), the headers specified by `REMOTE
 +
 Enter one path per line.
 +
-* *Last gather date for Automation Analytics.*: Set the date and time.
-* *Last gathered entries from the data collection service of {Analytics}*: -
+* *Last gather date for Automation Analytics*: Set the date and time.
+* *Last gathered entries from the data collection service of {Analytics}*: Do not enter anything in this field.
 * *{Analytics} Gather Interval*: Interval (in seconds) between data gathering. 
 +
 If *Gather data for {Analytics}* is set to false, this value is ignored.
