AAP-25515 Add setup process for RH AAP credential (new)

--- a/downstream/modules/eda/proc-eda-set-up-rhaap-credential.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-rhaap-credential.adoc
@@ -2,11 +2,12 @@
 
 = Setting up a {PlatformName} credential
 
+To run your rulebook activations successfully, you must connect {MenuAD} to {enuTopAE}. You can do this by adding a {Red Hat Ansible Automation Platform} credential.
+
 .Prerequisites
 
 * You are logged in to the {PlatformName} Dashboard as a Content Consumer.
 * You have created a user.
-* You can log in to the {EDAcontroller} Dashboard or you are added as a user in the organization.
 
 .Procedure
 
