AAP-28448 Update the variable in the note for modifying simultaneous activations

--- a/downstream/modules/eda/con-modifying-simultaneous-activations.adoc
+++ b/downstream/modules/eda/con-modifying-simultaneous-activations.adoc
@@ -10,7 +10,7 @@ To change this behavior, you must change the default maximum number of running r
 
 [NOTE]
 ====
-The value for `EDA_MAX_RUNNING_ACTIVATIONS` does not change when you modify the instance size, so it needs to be adjusted manually.
+The value for `MAX_RUNNING_ACTIVATIONS` does not change when you modify the instance size, so it needs to be adjusted manually.
 ====
 
 include::proc-modifying-activations-during-install.adoc[leveloffset=+1]
