AAP-28448 Final tweaks before peer review

--- a/downstream/modules/eda/con-modifying-simultaneous-activations.adoc
+++ b/downstream/modules/eda/con-modifying-simultaneous-activations.adoc
@@ -4,7 +4,7 @@
 
 [role="_abstract"]
 By default, {EDAcontroller} allows 12 rulebook activations to run simultaneously.
-If more than 12 rulebook activations are created, the expected behavior is that subsequent rulebook activations wait in pending until there is an available rulebook activation worker.
+If more than 12 rulebook activations are created, the expected behavior is that subsequent rulebook activations wait in pending status until there is an available rulebook activation worker.
 In this case, the rulebook activation status is displayed as *Pending* even if there is enough free memory and CPU on your {EDAcontroller} instance.
 To change this behavior, you must change the default maximum number of running rulebook activations.
 
