--- a/downstream/modules/eda/proc-modifying-activations-after-install.adoc
+++ b/downstream/modules/eda/proc-modifying-activations-after-install.adoc
@@ -10,5 +10,5 @@ You can modify this default value after installation by using the following proc
 . Navigate to the environment file at `/etc/ansible-automation-platform/eda/settings.yaml`.
 . Choose the number of maximum running activations that you need.
 For example, `MAX_RUNNING_ACTIVATIONS = 16`
-. Use the following command to restart EDA services: `automation-eda-controller-service restart`
+. Use the following command to restart {EDAName} services: `automation-eda-controller-service restart`
 
