--- a/downstream/modules/eda/ref-performance-troubleshooting.adoc
+++ b/downstream/modules/eda/ref-performance-troubleshooting.adoc
@@ -14,7 +14,7 @@ If the event you are expecting is coming from a source other than what is in the
 ** Ensure that you have set the correct conditions for matching the event and taking actions in the rulebook activation.
 
 * My activation keeps restarting in an infinite loop.
-** By default, the reset policy for rulebook activations is set to “on failure”. Change the estart policy using the following procedure:
-. Navigate to the Rulebook Activation screen.
-. Click the Restart Policy drop down menu. 
-. Choose the appropriate value: “On Failure”, “Always”, “Never”.
+** By default, the reset policy for rulebook activations is set to “on failure”. Change the restart policy using the following procedure:
+. Navigate to {MenuADRulebookActivations}.
+. Click the *Restart Policy* list to display the options. 
+. Select the appropriate value: *On Failure*, *Always*, *Never*.
