--- a/downstream/modules/platform/proc-editing-inventory-file.adoc
+++ b/downstream/modules/platform/proc-editing-inventory-file.adoc
@@ -29,8 +29,15 @@ $ cd ansible-automation-platform-setup-<latest-version>
 -----
 +
 . Open the `inventory` file with a text editor.
-. Edit `inventory` file parameters to specify your installation scenario. You can use one of the supported xref:con-install-scenario-examples[Installation scenario examples] as the basis for your `inventory` file.
+. Edit `inventory` file parameters to specify your installation scenario. 
+ifdef::mesh-VM[]
+For further information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/installing_on_virtual_machines/assembly-platform-install-scenario[Installing {PlatformName}]
+endif::mesh-VM[]
+ifdef::aap-install[]
+You can use one of the supported xref:con-install-scenario-examples[Installation scenario examples] as the basis for your `inventory` file.
 
 [role="_additional-resources"]
 .Additional resources
 * For a comprehensive list of pre-defined variables used in Ansible installation inventory files, see xref:appendix-inventory-files-vars[Inventory file variables].
+endif::aap-install[]
+
