Modified instructions for VM-based mesh
Correction

hackfest doc updates for mesh - install

https://issues.redhat.com/browse/AAP-26993

--- a/downstream/modules/platform/proc-running-setup-script.adoc
+++ b/downstream/modules/platform/proc-running-setup-script.adoc
@@ -16,5 +16,5 @@ $ sudo ./setup.sh
 Installation of {PlatformName} will begin.
 
 ifdef::mesh-VM[]
-If you want to add additional execution nodes to your automation mesh after the initial setup, edit the inventory file to add the new node, then rerun the `setup.sh` script.
+If you want to add additional nodes to your automation mesh after the initial setup, edit the inventory file to add the new node, then rerun the `setup.sh` script.
 endif::mesh-VM[]
