AAP-18761-A - include peer review changes

--- a/downstream/assemblies/platform/assembly-gw-dashboard.adoc
+++ b/downstream/assemblies/platform/assembly-gw-dashboard.adoc
@@ -8,7 +8,7 @@ ifdef::context[:parent-context: {context}]
 :context: gw-dashboard
 
 [role="_abstract"]
-The {PlatformName} dashboard provides automation management and monitoring capabilities, allowing you to administer and configure automation functions, as well as view recent job activity details and performance statistics related to it. 
+The {PlatformNameShort} dashboard provides automation management and monitoring capabilities, allowing you to administer and configure automation functions, as well as view recent job activity details and performance statistics related to it. 
 
 include::platform/con-gw-dash-features.adoc[leveloffset=+1]
 
