--- a/downstream/modules/eda/con-eda-projects-list-view.adoc
+++ b/downstream/modules/eda/con-eda-projects-list-view.adoc
@@ -6,7 +6,7 @@ On the *Projects* page, you can view the projects that you have created along wi
 
 [NOTE]
 ====
-If a rulebook changes in source control you can re-sync a project by selecting the sync icon next to the project from the *Projects* list view. 
+If a rulebook changes in source control, you can re-sync a project by selecting the sync icon next to the project from the *Projects* list view. 
 The *Git hash* updates represent the latest commit on that repository. 
 An activation must be restarted or recreated if you want to use the updated project.
 ====
