Adding attributes for module reuse

--- a/downstream/assemblies/platform/assembly-gs-auto-op.adoc
+++ b/downstream/assemblies/platform/assembly-gs-auto-op.adoc
@@ -1,4 +1,13 @@
+ifdef::context[:parent-context-of-assembly-gs-auto-op: {context}]
+
+:_mod-docs-content-type: ASSEMBLY
+
+ifndef::context[]
+[id="assembly-gs-auto-op"]
+endif::[]
+ifdef::context[]
 [id="assembly-gs-auto-op_{context}"]
+endif::[]
 
 = Getting started as an automation operator
 
@@ -23,3 +32,5 @@ include::platform/con-gs-manage-collections.adoc[leveloffset=+2]
 include::platform/proc-gs-upload-collection.adoc[leveloffset=+2]
 include::platform/con-gs-execution-env.adoc[leveloffset=+1]
 
+ifdef::parent-context-of-assembly-gs-auto-op[:context: {parent-context-of-assemblyname}]
+ifndef::parent-context-of-assembly-gs-auto-op[:!context:]
