--- a/downstream/assemblies/platform/assembly-gs-auto-dev.adoc
+++ b/downstream/assemblies/platform/assembly-gs-auto-dev.adoc
@@ -43,12 +43,12 @@ include::platform/con-gs-about-inv.adoc[leveloffset=+1]
 include::platform/proc-controller-create-inventory.adoc[leveloffset=+2]
 include::assembly-controller-job-templates.adoc[leveloffset=+1]
 include::platform/con-gs-rulebook-activations.adoc[leveloffset=+1]
-//include::platform/proc-eda-set-up-rulebook-activation.adoc[leveloffset=+2]
-//include::platform/con-eda-rulebook-activation-list-view.adoc[leveloffset=+3]
-//include::platform/proc-eda-enable-rulebook-activations.adoc[leveloffset=+2]
-//include::platform/proc-eda-restart-rulebook-activations.adoc[leveloffset=+2]
-//include::platform/proc-eda-delete-rulebook-activations.adoc[leveloffset=+2]
-//include::platform/proc-eda-activate-webhook.adoc[leveloffset=+2]
+include::eda/proc-eda-set-up-rulebook-activation.adoc[leveloffset=+2]
+include::eda/con-eda-rulebook-activation-list-view.adoc[leveloffset=+3]
+include::eda/proc-eda-enable-rulebook-activations.adoc[leveloffset=+2]
+include::eda/proc-eda-restart-rulebook-activations.adoc[leveloffset=+2]
+include::eda/proc-eda-delete-rulebook-activations.adoc[leveloffset=+2]
+include::eda/proc-eda-activate-webhook.adoc[leveloffset=+2]
 
 ifdef::parent-context-of-assembly-gs-auto-dev[:context: {parent-context-of-assemblyname}]
 ifndef::parent-context-of-assembly-gs-auto-dev[:!context:]
