--- a/downstream/assemblies/platform/assembly-automation-mesh-operator-aap.adoc
+++ b/downstream/assemblies/platform/assembly-automation-mesh-operator-aap.adoc
@@ -2,17 +2,17 @@
 
 = {AutomationMeshStart} for operator-based {PlatformName}
 
-Scaling your automation mesh is available on OpenShift deployments of {PlatformName} and is possible through adding or removing nodes from your cluster dynamically, using the *Instances* resource of the {ControllerName} UI, without running the installation script.
+Scaling your automation mesh is available on OpenShift deployments of {PlatformName} and is possible through adding or removing nodes from your cluster dynamically, using the *Instances* resource of the {PlatformNameShort} UI, without running the installation script.
 
 Instances serve as nodes in your mesh topology. 
 {AutomationMeshStart} enables you to extend the footprint of your automation. 
 The location where you launch a job can be different from the location where the ansible-playbook runs.
 
-To manage instances from the {ControllerName} UI, you must have System Administrator or System Auditor permissions.
+To manage instances from the {PlatformNameShort} UI, you must have System Administrator or System Auditor permissions.
 
 In general, the more processor cores (CPU) and memory (RAM) a node has, the more jobs that can be scheduled to run on that node at once. 
 
-For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_user_guide/controller-jobs#controller-capacity-determination[Automation controller capacity determination and job impact]. 
+For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/using_automation_execution/controller-jobs#controller-capacity-determination[Automation controller capacity determination and job impact]. 
 
 include::platform/ref-operator-mesh-prerequisites.adoc[leveloffset=+1]
 include::platform/proc-set-up-virtual-machines.adoc[leveloffset=+1]
