--- a/downstream/modules/platform/con-automation-mesh-node-types.adoc
+++ b/downstream/modules/platform/con-automation-mesh-node-types.adoc
@@ -24,7 +24,7 @@ The *control plane* consists of hybrid and control nodes. Instances in the contr
 * *Control nodes* - control nodes run project and inventory updates and system jobs, but not regular jobs. Execution capabilities are disabled on these nodes.
 endif::mesh-VM[]
 ifdef::operator-mesh[]
-Instances in the control plane run persistent {ControllerName} services such as the web server and task dispatcher, in addition to project updates, and management jobs. 
+Instances in the control plane run persistent {PlatformNameShort} services such as the web server and task dispatcher, in addition to project updates, and management jobs. 
 However, in the operator-based model, there are no hybrid or control nodes. 
 There are container groups, which make up containers running on the Kubernetes cluster. 
 That comprises the control plane. 
