--- a/downstream/modules/platform/ref-operator-mesh-prerequisites.adoc
+++ b/downstream/modules/platform/ref-operator-mesh-prerequisites.adoc
@@ -2,7 +2,7 @@
 
 = Prerequisites
 
-The automation mesh is dependent on hop and execution nodes running on {RHEL} (RHEL). 
+The automation mesh is dependent on hop and execution nodes running on _{RHEL}_ (RHEL). 
 Your {PlatformName} subscription grants you ten {RHEL} licenses that can be used for running components of {PlatformNameShort}. 
 
 For more information about {RHEL} subscriptions, see link:{BaseURL}/red_hat_enterprise_linux/9/html/configuring_basic_system_settings/assembly_registering-the-system-and-managing-subscriptions_configuring-basic-system-settings[Registering the system and managing subscriptions] in the {RHEL} documentation.
@@ -10,9 +10,9 @@ For more information about {RHEL} subscriptions, see link:{BaseURL}/red_hat_ente
 The following steps prepare the RHEL instances for deployment of the automation mesh.
 
 . You require a {RHEL} operating system. 
-Each node in the mesh requires a static IP address, or a resolvable DNS hostname that {ControllerName} can access. 
+Each node in the mesh requires a static IP address, or a resolvable DNS hostname that {PlatformNameShort} can access. 
 . Ensure that you have the minimum requirements for the RHEL virtual machine before proceeding. 
-For more information, see the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_planning_guide/platform-system-requirements[Red Hat Ansible Automation Platform system requirements].
+For more information, see the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/installing_on_virtual_machines/platform-system-requirements[Red Hat Ansible Automation Platform system requirements].
 . Deploy the RHEL instances within the remote networks where communication is required.
 For information about creating virtual machines, see link:{BaseURL}/red_hat_enterprise_linux/9/html/configuring_and_managing_virtualization/assembly_creating-virtual-machines_configuring-and-managing-virtualization[Creating Virtual Machines] in the _{RHEL}_ documentation. Remember to scale the capacity of your virtual machines sufficiently so that your proposed tasks can run on them.
 
