Add note about execution node
hackfest doc feedback - mesh section 2.2

https://issues.redhat.com/browse/AAP-27000

--- a/downstream/modules/platform/proc-set-up-virtual-machines.adoc
+++ b/downstream/modules/platform/proc-set-up-virtual-machines.adoc
@@ -58,5 +58,11 @@ sudo dnf upgrade -y
 ----
 sudo dnf install -y ansible-core
 ----
-
++
+[NOTE]
+====
+Ansible core is required on the machine that runs the {AutomationMesh} configuration bundle playbooks.  This document assumes that happens on the execution node. 
+However, this step can be omitted if you run the playbook from a different machine. 
+You cannot currently run directly from the control node, this is not currently supported, but future support would expect the control node has direct connectivity to the execution node.
+====
 
